immich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: production
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`immich.staging.imranr.dev`)
      kind: Rule
      services:
        - name: immich-server
          port: 3001
  tls:
    secretName: imranr-dev-tls
